# controllers/front.js
@@ -1,7 +1,7 @@
 module.exports = (dependencies) => {
     const router = dependencies.router();
 
-    router.get('/home', async (req, res) => {
+    router.get('/home', async (request, response) => {
         // #swagger.path = '/front/home'
         // #swagger.tags = ['Front']
         // #swagger.description = 'Home page of the front endpoint'
@@ -19,9 +19,17 @@ module.exports = (dependencies) => {
                 songs[0].artists[_artist].last_name = artist.last_name;
             }
         }
-    
-        res.render('home', {
-            songs: songs
+
+        const reviews = (await dependencies.axios.get(dependencies.base_url + '/reviews')).data;
+
+        for(const review of reviews) {
+            review.user = (await dependencies.axios.get(dependencies.base_url + '/users/' + review.user)).data.nickname; 
+        }
+
+        response.render('home', {
+            songs: songs,
+            users: (await dependencies.axios.get(dependencies.base_url + '/users')).data,
+            reviews: reviews
         });
     });
 
