# models/song.js
@@ -3,10 +3,7 @@ module.exports = (dependencies) => {
         title: String,
         release_year: Number,
         rating: Number,
-        summary: String,
-        artists: [dependencies.mongoose.Schema.ObjectId],
-        genres: [dependencies.mongoose.Schema.ObjectId],
-        reviews: [dependencies.mongoose.Schema.ObjectId]
+        summary: String
     });
 
     dependencies.mongoose.model('Song', song);
